syntax = "proto3";

package address;

option go_package = "./pkg/pb";

service Address {
    rpc AddAddress (AddAddressRequest) returns (AddAddressResponse) {};
    rpc GetAddressByID (GetAddressRequest) returns (GetAddressResponse) {};
    rpc UpdateAddress (UpdateAddressRequest) returns (UpdateAddressResponse) {};
    rpc DeleteAddress (DeleteAddressRequest) returns (DeleteAddressResponse) {};
}

// Address-related messages
message AddressDetails {
    uint64 id = 1;
    uint64 user_id = 2;
    string street = 3;
    string city = 4;
    string state = 5;
    string district = 6;
    string zip_code = 7;
    string country = 8;
}

message AddAddressRequest {
    uint64 user_id = 1;
    string street = 2;
    string city = 3;
    string state = 4;
    string district = 5;
    string zip_code = 6;
    string country = 7;
}

message AddAddressResponse {
    int64 status = 1;
    AddressDetails addressDetails = 2;
}

message GetAddressRequest {
   uint64 id = 1;
}

message GetAddressResponse {
    int64 status = 1;
    AddressDetails addressDetails = 2;
}

message UpdateAddressRequest {
    uint64 id = 1;
    uint64 user_id = 2;
    string street = 3;
    string city = 4;
    string state = 5;
    string district = 5;
    string zip_code = 6;
    string country = 7;
}

message UpdateAddressResponse {
    int64 status = 1;
    AddressDetails addressDetails = 2;
}

message DeleteAddressRequest {
    uint64 id = 1;
}

message DeleteAddressResponse {
    int64 status = 1;
}
